--- a/cms/templates/_/layouts/base.twig
+++ b/cms/templates/_/layouts/base.twig
@@ -23,16 +23,37 @@
         <meta name="csrf-token" content="{{ craft.app.request.csrfToken() }}">
 
         {# Project JS #}
-        {{ craft.vite.script("src/js/app.ts", false) }}
+        {{ craft.vite.script("src/js/app.ts") }}
         {# /Project JS #}
-        {{ craft.vite.includeCriticalCssTags('index') }}
 
         {# -- Tiny Cookie JavaScript -- #}
         <script>
             {{ source("_inline-js/tiny-cookie.min.js") }}
         </script>
-
         {%- endminify -%}
+        {# -- Critical CSS -- #}
+        {#
+        # Use Nginx Server Side Includes (SSI) to render different HTML depending on
+        # the value in the `critical-css` cookie. ref: http://nginx.org/en/docs/http/ngx_http_ssi_module.html
+        #}
+        {% set cssHash = craft.vite.getCssHash("src/js/app.ts") %}
+        {#
+        # If the `critical-css` cookie is set, the client already has the CSS file download,
+        # so don't include the critical CSS, and load the full stylesheet(s) synchronously
+        #}
+        <!--# if expr="$HTTP_COOKIE=/critical\-css\={{ cssHash }}/" -->
+        {{ craft.vite.script("src/js/app.ts", false) }}
+        <!--# else -->
+        {#
+        # If the cookie is not set, set the cookie, then include the critical CSS for this page,
+        # and load the full stylesheet(s) asychronously
+        #}
+        <script>
+            Cookie.set("critical-css", "{{ cssHash }}", { expires: "7D", secure: true });
+        </script>
+        {{ craft.vite.includeCriticalCssTags() }}
+        {{ craft.vite.script("src/js/app.ts", true) }}
+        <!--# endif -->
     </head>
 
     <body class="first-load loading {% if bodyClass is defined %}{{ bodyClass }}{% endif %}">
